--- a/Week7/Day2/01-css-linking-imports/styles.css
+++ b/Week7/Day2/01-css-linking-imports/styles.css
@@ -23,3 +23,19 @@ h1 {
     margin: 150px;
 }
 
+
+button {
+    border: 2px solid red;
+}
+
+#demo {
+    border: 5px dotted pink;
+}
+
+body h1 {
+    color: red;
+}
+
+div > h1 {
+    color: blue;
+}
