--- a/Week7/Day2/01-css-linking-imports/button.css
+++ b/Week7/Day2/01-css-linking-imports/button.css
@@ -15,3 +15,12 @@ button:hover {
     color: #97caec;
     font-weight: 800;
 }
+
+.button {
+    border: 2px solid purple;
+}
+
+
+button#demo {
+    border: 2px solid white;
+}
