--- a/Week7/Day2/04-css-box-model/main.css
+++ b/Week7/Day2/04-css-box-model/main.css
@@ -10,11 +10,16 @@ html, body {
     vertical-align: bottom;
 
     /* Your code here */
+    width: 30px;
+    height: 30px;
+    margin-bottom: 4px;
 }
 
 
 h1 {
     /* Your code here */
+    display: inline;
+    height: 1000px;
 }
 
 /* Phase 2 */
@@ -24,10 +29,24 @@ h1 {
     vertical-align: top;
 
     /* Your code here */
+    border-style: dotted;
+    border-color: black;
+    border-width: 4px;
+
+    background-color: yellow;
+
+    height: 120px;
+    width: 120px;
+
+    margin: 10px;
+    padding: 20px;
+
+    display: inline-block;
 }
 
 .alternate {
     /* Your code here */
+    box-sizing: border-box;
 }
 
 /* Phase 3 */
@@ -45,6 +64,12 @@ h1 {
     font-size: larger;
 
     /* Your code here */
+    margin: 0px auto 10px;
+    /* margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto; */
+    width: fit-content;
+    padding: 40px;
 }
 
 .attribution {
@@ -52,4 +77,5 @@ h1 {
     font-style: italic;
 
     /* Your code here */
+    display: block;
 }
