--- a/Week7/Day3/02-css-grid/main.css
+++ b/Week7/Day3/02-css-grid/main.css
@@ -12,27 +12,38 @@ html, body, div {
 
     /* Phase 1 */
     /* Your code here */
-
+    display: grid;
+    grid-template-columns: 3fr auto 1fr;
     /* Bonus Phase */
     /* Your code here */
+    grid-template-areas: 
+    "header header header"
+    "main . sidebar"
+    "footer footer footer";
+   
+    grid-row-gap: 5px;
 }
 .item-1 {
     background-color: #87a7b3; /* steel blue */
 
     /* Phase 1 */
     /* Your code here */
+    grid-area: header;
 }
 .item-2 {
     background-color: #e1f1dd; /* light sea green */
 
     /* Phase 1 */
     /* Your code here */
+    grid-area: main;
 }
 .item-3 {
     background-color: #cdc7be; /* grey */
 
     /* Phase 1 */
     /* Your code here */
+    grid-area: sidebar;
+    
 }
 .item-4 {
     background-color: #766161; /* brown */
@@ -40,6 +51,7 @@ html, body, div {
 
     /* Phase 1 */
     /* Your code here */
+    grid-area: footer;
 }
 
 .divider {
@@ -47,6 +59,8 @@ html, body, div {
 
     /* Bonus Phase */
     /* Your code here */
+    box-sizing: border-box;
+    width: 100px;
 }
 
 /* ====== */
@@ -57,4 +71,17 @@ html, body, div {
 
     /* Phase 2 */
     /* Your code here */
+    display: inline-grid;
+    grid-template-columns: repeat(6, 100px);
+    grid-template-rows: repeat(3, 50px);
+
+    grid-auto-flow: column;
+
+    place-items: center;
+}
+
+@media screen and (min-width: 1000px){
+    .grid-container {
+        border: 2px solid red;
+    }
 }
