--- a/Week7/Day4/01-css-transitions/your-code.css
+++ b/Week7/Day4/01-css-transitions/your-code.css
@@ -5,6 +5,12 @@
     width: auto;
     margin-left: 300px;
     /* Your code here */
+    transition: 2s;
+}
+
+.rocket_svg:hover {
+    transform: rotate(250deg);
+    /* margin-left: 500px; */
 }
 
 /* Create rocket hover animation here
@@ -17,6 +23,12 @@
     width: auto;
     margin-left: 200px;
     /* Your code here */
+    transition: height 3s ease;
+}
+
+.astronaut_svg:hover {
+    height: 400px;
+    transform: translateX(100px)
 }
 
 /* Create astronaut hover animation here
@@ -27,9 +39,27 @@
     height: 200px;
     width: auto;
     margin-left: 300px;
-    /* Your animation here
+    animation: 2s infinite linear spin;
 }
 
 @keyframes spin {
-    /* Set up your keyframe animation here
+    0% {
+        transform: rotate(0deg)
+    }
+
+    20% {
+        height: 50px;
+    }
+
+    40% {
+        margin-left: 500px;
+    }
+
+    60% {
+        transform: rotate(-700deg)
+    }
+
+    100% {
+        transform: rotate(360deg)
+    }
 }
